[add]: methods for categories
