# swagger/product/swagger.yaml
@@ -35,11 +35,44 @@ paths:
           name: main
           schema:
             type: boolean
+        - in: query
+          name: leaf
+          schema:
+            type: boolean
       responses:
         200: 
           $ref: "#/components/responses/GetCategoriesResponse"
         400:
           $ref: "#/components/responses/ErrorResponse"
+
+  /categories/children/{categoryName}:
+    get:
+      tags:
+        - Category
+      description: Получить список подкатегорий
+      summary: Получить список подкатегорий
+      parameters:
+        - $ref: "#/components/parameters/categoryName"
+      responses:
+        200: 
+          $ref: "#/components/responses/GetSubCategoriesResponse"
+        400:
+          $ref: "#/components/responses/ErrorResponse"
+
+  /categories/{categoryName}:
+    get:
+      tags:
+        - Category
+      description: Получить список подкатегорий
+      summary: Получить список подкатегорий
+      parameters:
+        - $ref: "#/components/parameters/categoryName"
+      responses:
+        200: 
+          $ref: "#/components/responses/GetCategoryResponse"
+        400:
+          $ref: "#/components/responses/ErrorResponse"
+      
 
   /products:
     post:
@@ -106,18 +139,19 @@ components:
       type: object
       required: 
         - id
-        - childrenCategories
+        - children
+        - products
         - name
       properties:
         id:
           type: string
           format: uuid
-        parentCategory:
+        parent:
             $ref: "#/components/schemas/Category"
         name:
           type: string
           example: Аниме фигурки
-        childrenCategories:
+        children:
           type: array
           items:
             $ref: "#/components/schemas/Category"
@@ -178,9 +212,8 @@ components:
       properties:
         name:
           type: string
-        parentCategory:
+        parent:
           type: string
-          format: uuid
 
     CreateProductResponse:
       type: object
@@ -252,6 +285,21 @@ components:
           items:
             type: string
 
+    GetSubCategoriesResponse:
+      type: object
+      required:
+        - categories
+      properties:
+        categories:
+          type: array
+          items: 
+            type: string
+
+    GetCategoryResponse:
+      allOf:
+        - $ref: "#/components/schemas/Category"
+        - type: object
+      
     ErrorResponse:
       type: object
       required:
@@ -289,6 +337,20 @@ components:
           schema:
             $ref: "#/components/schemas/GetCategoriesResponse"
 
+    GetSubCategoriesResponse:
+      description: Получить список подкатегорий
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/GetSubCategoriesResponse"
+
+    GetCategoryResponse:
+      description: Получить категорию
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/GetCategoryResponse"
+
     ErrorResponse:
       description: Что-то не так
       content:
@@ -304,3 +366,9 @@ components:
       schema:
         type: string
         format: uuid
+    categoryName:
+      name: categoryName
+      in: path
+      required: true
+      schema:
+        type: string
